k8s-manifests/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ing
  namespace: develop
  labels:
    app.kubernetes.io/name: nginx-green
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: green
    app.kubernetes.io/version: "1.0"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: nginx-green-svc
            port:
              number: 80
